[gd_scene load_steps=4 format=2]

[ext_resource path="res://mic_recorder/mic_recorder.png" type="Texture" id=1]
[ext_resource path="res://mic_recorder/mic_recorder.gd" type="Script" id=2]

[sub_resource type="AudioStreamMicrophone" id=1]

[node name="Recorder" type="PanelContainer"]
margin_right = 156.0
margin_bottom = 130.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 149.0
margin_bottom = 123.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Record" type="CheckButton" parent="VBoxContainer"]
margin_right = 142.0
margin_bottom = 40.0
text = "record"
icon = ExtResource( 1 )

[node name="Test" type="Button" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 142.0
margin_bottom = 64.0
disabled = true
text = "test"

[node name="Save" type="Button" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 142.0
margin_bottom = 88.0
disabled = true
text = "save"

[node name="TestPlayer" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
bus = "Record"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0

[connection signal="toggled" from="VBoxContainer/Record" to="." method="_on_Record_toggled"]
[connection signal="pressed" from="VBoxContainer/Test" to="." method="_on_Test_pressed"]
[connection signal="pressed" from="VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
